Rotation function changes
Changed the cube rotation function to be similar to the way the face
rotation function.

--- a/package.json
+++ b/package.json
@@ -1,12 +1,27 @@
 {
   "name": "node-cube-model",
-  "version": "0.1.1",
-  "author": "Nick Allred <NAllred91@gmail.com>",
+  "version": "0.2.0",
+  "author": {
+    "name": "Nick Allred",
+    "email": "NAllred91@gmail.com"
+  },
   "dependencies": {
     "underscore": "~1.8.3"
   },
   "repository": {
     "type": "git",
     "url": "git://github.com/nallred91/node-cube-model.git"
-  }
+  },
+  "readme": "# node-cube-model\n",
+  "readmeFilename": "README.md",
+  "gitHead": "f2add0b34395cceb74a2bcc1be30dfc569671b91",
+  "description": "",
+  "bugs": {
+    "url": "https://github.com/nallred91/node-cube-model/issues"
+  },
+  "homepage": "https://github.com/nallred91/node-cube-model#readme",
+  "_id": "node-cube-model@0.1.1",
+  "scripts": {},
+  "_shasum": "71b7e7b4a994f4d08249a92f97eb9e94e85912e1",
+  "_from": "node-cube-model@*"
 }
